# iceberg-python

./: .pre-commit-config.yaml  LICENSE  Makefile  pyproject copy.toml  pyproject-uv.toml  pyproject.toml  setup.py
.github/workflows/: nightly-pypi-build.yml  pypi-build-artifacts.yml  python-ci-docs.yml  python-ci.yml  python-release-docs.yml  python-release.yml  svn-build-artifacts.yml
dev/: .rat-excludes
mkdocs/docs/: contributing.md
pyiceberg/: partitioning.py
pyiceberg/catalog/: __init__.py  hive.py
pyiceberg/catalog/rest/: __init__.py
pyiceberg/table/: __init__.py  metadata.py
tests/: conftest.py
tests/catalog/: test_hive.py  test_rest.py
